<resources>
    <string name="app_name" translatable="false">FlatApp</string>
    <string name="title_activity_shopping_list" translatable="false">ShoppingListActivity</string>
    <string name="new_list_heading">Create New List</string>
    <string name="add_new_list">Add New List</string>
    <string name="add_new_item">Add New Item</string>
    <string name="new_list_hint">Enter list name here…</string>
    <string name="new_list_item_heading">Add item</string>
    <string name="new_list_item_hint">Enter item name here…</string>
    <string name="edit_list_item_heading">Edit item</string>
    <string name="edit_list_item_hint">Enter new name here…</string>

    <string name="cap_unknown">UNKNOWN</string>
    <string name="cap_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="del_item">Delete Item</string>
    <string name="no_title">No Title</string>
    <string name="clicked">Clicked!</string>
    <string name="sure_question">Are you sure?</string>
    <string name="del_conformation">Do you really want to delete?</string>
    <string name="due">Due: </string>
    <string name="from">From</string>
    <string name="to">To</string>

    <string name="empty_screen">No Task Created</string>
    <string name="task_add_button">New Task</string>
    <string name="menu_add_button">New Roster</string>
    <string name="activity_twopane_qualifier">Rosters</string>
    <string name="activity_twopane_tasks">Tasks</string>
    <string name="hint_enter_title">Enter Title Here</string>
    <string name="title_only">Title:</string>
    <string name="dialog_title_task">Task:</string>
    <string name="dialog_title_qualifier">Roster:</string>
    <string name="menu_delete_button">Delete</string>
    <string name="menu_no_qualifier_selected">No Roster Selected</string>
    <string name="dialog_task_done">Done</string>
    <string name="no_title_task_enter">No title entered. No Task created</string>
    <string name="no_title_qualifier_enter">No title entered. No Roster created</string>
    <string name="qualifier_must_select">Roster must be selected!</string>
    <string name="rosrer_exists">This Roster already exists</string>

    <string name="bill_title_hint">Enter a title for the bill.  (Required)</string>
    <string name="bill_due_fragement">Due: </string>
    <string name="bill_title_label">Title</string>
    <string name="bill_details_label">Details</string>
    <string name="bill_amount_label">Amount</string>
    <string name="bill_details_hint">Enter an extra description.</string>
    <string name="bill_amount_hint">Enter the amount for the bill.  (Required)</string>
    <string name="bill_paid_label">Paid</string>
    <string name="bill_date_picker_title">Due date for bill:</string>
    <string name="new_bill">New Bill</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$s bill</item>
        <item quantity="other">%1$s bills</item>
    </plurals>
    <string name="bill_due_date_label">Due Date</string>
    <string name="empty_title_warning">Title cannot be empty.</string>
    <string name="failed_bill_add">Bill failed to add. Title was empty.</string>
    <string name="delete_bill">Delete Bill</string>
    <string name="remove_bill">Bill Removed</string>
    <string name="save_bill">Save Bill</string>

    <string name="calendar_event_name" translatable="false">EventName</string>
    <string name="calendar_event_Time">Time</string>
    <string name="calendar_all_day">All Day</string>
    <string name="calendar_guest">Guest</string>
    <string name="calendar_note">Note</string>
    <string name="calendar_desc">Description</string>
    <string name="sync_flat_data">Sync Flat Data</string>
    <string name="sync_started">Syncing Started</string>

</resources>
