<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bill_title_label"
            />

        <EditText
            android:id="@+id/bill_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bill_title_hint"
            android:imeOptions="actionDone"
            android:inputType="textCapWords|textAutoCorrect"
            />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bill_details_label"
            />

        <EditText
            android:id="@+id/bill_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bill_details_hint"
            android:inputType="textCapSentences|textAutoCorrect"
            />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bill_due_date_label"
            />

        <Button
            android:id="@+id/bill_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bill_amount_label"
            />

        <EditText
            android:id="@+id/bill_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bill_amount_hint"
            android:inputType="numberDecimal"
            />

        <CheckBox
            android:id="@+id/bill_paid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/bill_paid_label"
            />
    </LinearLayout>
</ScrollView>