<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title_task"
        style="?android:listSeparatorTextViewStyle"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dialog_task_titletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_only"
            style="?android:listSeparatorTextViewStyle"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_task_settitle"
            android:hint="@string/hint_enter_title"
            android:textColor="@android:color/primary_text_light"
            android:layout_toRightOf="@+id/dialog_task_titletext"
            android:layout_marginLeft="4dp"/>

    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_dialog_task_completed"
        android:text="@string/dialog_task_done"
        android:padding="4dp"/>


</LinearLayout>