<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/calendar_event_name"
        android:ems="10"
        android:id="@+id/calendar_event_name" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/calendar_event_Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calendar_time_display"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="13dp"
            android:textSize="20sp"/>

    </RelativeLayout>

    <CheckBox
        android:text="@string/calendar_all_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calendar_time_display"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/calendar_checkBox_allday"
        android:layout_weight="0.04"
        android:textColor="#fff"
        android:buttonTint="#fff"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:id="@+id/calendar_events_from">

        <TextView
            android:text="@string/from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calendar_text_from"
            android:textColor="#fff"/>

        <Spinner
            android:layout_height="wrap_content"
            android:layout_below="@+id/calendar_text_from"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:id="@+id/calendar_date_from"
            android:layout_width="170dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calendar_time_from"
            android:layout_alignTop="@+id/calendar_date_from"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:id="@+id/calendar_events_to">

        <TextView
            android:text="@string/to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calendar_text_to"
            android:textColor="#fff"/>

        <Spinner
            android:layout_height="wrap_content"
            android:layout_below="@+id/calendar_text_to"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:id="@+id/calendar_date_to"
            android:layout_width="170dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calendar_time_to"
            android:layout_alignTop="@+id/calendar_date_to"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calendar_events_guest">

        <TextView
            android:text="@string/calendar_guest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calendar_guest_display"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="13dp"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/calendar_guest"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="46dp"
            android:id="@+id/editText4" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_menu_add"
            android:layout_alignTop="@+id/editText4"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="54dp"
            android:layout_marginEnd="54dp"
            android:id="@+id/floatingActionButton" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calendar_events_note">

        <TextView
            android:text="@string/calendar_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calendar_guest_note"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="13dp"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/calendar_desc"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="46dp"
            android:id="@+id/calendar_date_desc"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />



    </RelativeLayout>

</LinearLayout>