<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?@android:attr/dividerHorizontal"
    android:orientation="vertical"
    android:showDividers="middle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/activity_twopane_qualifier"
                android:textStyle="bold"
                android:textSize="@dimen/abc_text_size_large_material"
                android:gravity="center"
                style="?android:listSeparatorTextViewStyle"
                />
            </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/activity_twopane_tasks"
                android:gravity="center"
                android:textSize="@dimen/abc_text_size_large_material"
                android:textStyle="bold"
                style="?android:listSeparatorTextViewStyle"/>
            </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="?@android:attr/dividerHorizontal"
        android:orientation="horizontal"
        android:showDividers="middle">

        <FrameLayout
            android:id="@+id/fragment_container_qualifier"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fragment_container_tasks"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fragment_task_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_add"
                android:title="@string/task_add_button"
                app:backgroundTint="@color/tile3"
                app:rippleColor="#FFF"
                android:layout_gravity="bottom|right"/>
        </FrameLayout>

    </LinearLayout>

</LinearLayout>